fix: align the checkmark center in narrow viewport

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -236,6 +236,7 @@ button.map-title {
 .map-challenge-title a {
   padding: 10px 15px;
   width: 100%;
+  align-items: center;
 }
 
 .map-challenges-grid {
